test/files/neg/t7870.scala
class C(a: Int = 0, b: Any) {
  def this(a: Int = 0) = this(???, ???)
}
